--- a/README
+++ b/README
@@ -9,38 +9,54 @@ Whereas the OPT repo contains both a frontend and backend, the setup
 to make this work in Java consists of entirely replacing the backend,
 and then tweaking the frontend only where needed.
 
+INSTALLATION
+
+We assume you have already installed (requires root access):
+https://github.com/cemc/safeexec
+https://github.com/daveagp/java_jail 
+See the instructions therein for details.
+
+Next, in some folder accessible to your web server,
+
+git clone https://github.com/daveagp/java_visualize
+cd java_visualize
+git clone https://github.com/marijnh/CodeMirror CodeMirror3
+git clone https://github.com/cemc/OnlinePythonTutor
+
+(alternatively, install CodeMirror3, OnlinePythonTutor as symlinks or subrepos.
+note the name CodeMirror*3* and the *version* of the PythonTutor used.)
+
+At this point, visiting
+http://url-referencing-java_visualize/
+should give you a beautiful (but non-working) frontend, and
+http://url-referencing-java_visualize/java_safe_ram_maketrace.php
+should give you a "http mangling" error.
+
+Finally, edit the first few lines of
+java_safe_ram_maketrace.php
+(or use .cfg.php as described therein)
+to indicate where you installed safeexec and java_jail
+
+Now try the visualizer out!
+
+MORE INFO
+
 What's inside this directory:
  -- index.html is a modified version of visualize.html 
  -- jv-frontend.js is a modified version of opt-frontend.js
- -- java_safe_maketrace.php connects the frontend to the backend
+ -- java_safe_ram_maketrace.php connects the frontend to the backend
  -- example-code is a directory full of example Java files to visualize
 
-To get the frontend to work, in this directory, you need to:
- -- replace ./OnlinePythonTutor with a symlink (or subrepo, etc)
-    to the code at https://github.com/pgbovine/OnlinePythonTutor/
- -- replace ./CodeMirror3 with a symlink (or subrepo, etc)
-    to the code at https://github.com/marijnh/CodeMirror
-
-Note that in the entire frontend, only java_safe_maketrace.php is a file
+Note that in the entire frontend, only java_safe_ram_maketrace.php is a file
 written in a server-side language. Everything else we use is static,
 although OnlinePythonTutor has some server-side files that this Java
 version does not use.
-
-The way we use this code is (requires root or sudo access):
- -- install CEMC safeexec on your system --  https://github.com/cemc/safeexec
- -- install java_jail on your system -- https://github.com/daveagp/java_jail 
- -- you have to be root to set these up
- -- you don't want these backend packages in a folder accessible by http
-
-You will have to modify the file locations mentioned in java_safe_maketrace.php
-to reflect the installation location of your java_jail and safeexec (or 
-lack thereof if you are living dangerously).
 
 ====
 
 The modified files (index.html, jv-frontend.js) retain the MIT license 
 under which they were published in the OnlinePythonTutor repo. 
 
-The other files (java_safe_maketrace.php, example-code/*) are released under 
+The other files (java_safe_ram_maketrace.php, example-code/*) are released under
 the GNU Affero General Public License, versions 3 or later. See LICENSE
 or visit: http://www.gnu.org/licenses/agpl.html
