--- a/TODO
+++ b/TODO
@@ -2,6 +2,8 @@ only add a border to stacks/queues if they're embedded within another object
 
 examples for ST / better documentation on main page about supported classes/libraries
 
+graphics! either encode primitive operations as text, or send frames
+
 short hashes for urls
 
 caches for past visualizations (probably don't cache 10 times to see if randomized/time-dependent)
