changing CodeMirror and OPT to submodules

--- a/README
+++ b/README
@@ -18,13 +18,7 @@ See the instructions therein for details.
 
 Next, in some folder accessible to your web server,
 
-git clone https://github.com/daveagp/java_visualize
-cd java_visualize
-git clone https://github.com/marijnh/CodeMirror CodeMirror3
-git clone https://github.com/pgbovine/OnlinePythonTutor
-
-(alternatively, install CodeMirror3, OnlinePythonTutor as symlinks or subrepos.
-note the name CodeMirror*3* and the *version* of the PythonTutor used.)
+git clone --recursive https://github.com/daveagp/java_visualize
 
 At this point, visiting
 http://url-referencing-java_visualize/
