--- a/README
+++ b/README
@@ -1,33 +1,37 @@
 java_visualize: visualization for java
 David Pritchard (daveagp@gmail.com), created May 2013
 
-This is the frontend for a Java version of Philip Guo's Python visualizer.
-Try it at: 
-      http://cscircles.cemc.uwaterloo.ca/java_visualize/
+This is the frontend for a Java visualizer. It is based on "Online Python Tutor",
+a Python visualizer by Philip Guo. Try it at these mirrors (as of time of writing): 
 
-Whereas the OPT repo contains both a frontend and backend, the setup
-to make this work in Java consists of entirely replacing the backend,
-and then tweaking the frontend only where needed.
+      http://cscircles.cemc.uwaterloo.ca/java_visualize/ (Java 8)
+      http://www.cs.princeton.edu/~cos126/java_visualize/ (Java 7)
+
+The Online Python Tutor repo contains both a frontend and backend.
+For Java wre readapt the frontend (so this repo contains OnlinePythonTutor
+as a subrepo) and replace the backend (it is in the java_jail repo mentioned
+below, since it runs in a sandbox).
 
 INSTALLATION
 
-We assume you have already installed (requires root access):
-https://github.com/cemc/safeexec
-https://github.com/daveagp/java_jail 
-See the instructions therein for details.
+Install these on your server first:
+ https://github.com/cemc/safeexec
+ https://github.com/daveagp/java_jail 
+This requires root access. See the instructions therein for details. It is best to
+install these in locations that are not served to users by your web server.
 
-Next, in some folder accessible to your web server,
+Next, in some folder accessible to your web server, run
 
 git clone --recursive https://github.com/daveagp/java_visualize
 
 At this point, visiting
-http://url-referencing-java_visualize/
+ http://your.website/url/to/java_visualize/
 should give you a beautiful (but non-working) frontend, and
-http://url-referencing-java_visualize/java_safe_ram_maketrace.php
+ http://your.website/url/to/java_visualize/java_safe_ram_maketrace.php
 should give you a "Couldn't find config.json" error.
 
 Next, copy config.example.json to config.json. Now visiting
-http://url-referencing-java_visualize/java_safe_ram_maketrace.php
+ http://your.website/url/to/java_visualize/java_safe_ram_maketrace.php
 should give you a "http mangling" error.
 
 Finally, edit config.json to indicate where you installed safeexec 
