--- a/README
+++ b/README
@@ -24,6 +24,8 @@ Next, in some folder accessible to your web server, run
 
 git clone --recursive https://github.com/daveagp/java_visualize
 
+It's recursive because it includes two submodules. Note this if you pull later on!
+
 At this point, visiting
  http://your.website/url/to/java_visualize/
 should give you a beautiful (but non-working) frontend, and
