'release' of 'C++ visualizer'

--- a/README
+++ b/README
@@ -43,6 +43,9 @@ and java_jail. (Just those first two entries need to be changed right now.)
 
 Now, try the visualizer out!
 
+THE "C++ VISUALZER"
+See cpp_visualizer.txt.
+
 FAQ
  -- click on "Click for FAQ" on the visualizer page
 
