--- a/README
+++ b/README
@@ -43,7 +43,7 @@ and java_jail. (Just those first two entries need to be changed right now.)
 
 Now, try the visualizer out!
 
-THE "C++ VISUALZER"
+THE "C++ VISUALIZER"
 See cpp_visualizer.txt.
 
 FAQ
